package edu.fiuba.algo3.modelo.pais;

import edu.fiuba.algo3.modelo.Jugador;

public class Ocupado implements EstadoPais {

    public Ocupado() {
    }
    public void ocuparPais(Jugador jugador, Pais pais){
    }



}
